--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,13 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+
   <body>
+    <main>
+      <%= flash.each do |message_type, message| %>
+       <div class="flash-message <%= message_type %>"><%= message %></div>
+      <% end %>
     <%= yield %>
+    </main>
   </body>
 </html>
