--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <main>
-      <%= flash.each do |message_type, message| %>
+      <% flash.each do |message_type, message| %>
        <div class="flash-message <%= message_type %>"><%= message %></div>
       <% end %>
     <%= yield %>
