--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,42 +1,46 @@
 <h2>Books</h2>
 
 <table>
-  <th><td>Title</td><td>Body</td></th>
-
+  <tr><th>Title</th><th>Body</th></tr>
+  
   <% @books.each do |book| %>
-
+  
   <tr>
-  <td><%= book.title %></td>
+  <td class="table-title"><%= book.title %></td>
   <td><%= book.body %></td>
-  <td><%= link_to "Show" , book_path(book.id) %></td>
-  <td><%= link_to "Edit" , edit_book_path(book.id) %></td>
-  <td><%= link_to "Destroy" , destroy_book_path(book.id), method: :delete , "data-confirm" => "Are you sure?" %></td>
+  <td><a class="link"><%= link_to "Show" , book_path(book.id) %></a></td>
+  <td><a class="link"><%= link_to "Edit" , edit_book_path(book.id) %></a></td>
+  <td><a class="link"><%= link_to "Destroy" , book_path(book.id), method: :delete , "data-confirm" => "Are you sure?" %></a></td>
   </tr>
 
   <% end %>
 </table>
 
+<div class="new-book">
 
-<h2>New book</h2>
+<h3>New book</h3>
+  
+  <% if @book.errors.any? %>
+   <%= @book.errors.count %>error has occurred
 
-<% if @book.errors.any? %>
+  <ul>
+   <% @book.errors.full_messages.each do |message| %>
+    <li> <%= message %></li>
+   <% end %>
+  </ul>
 
-<ul>
- <% @book.errors.full_messages.each do |message| %>
-  <li> <%= message %></li>
- <% end %>
-</ul>
+  <% end %>
 
-<% end %>
+  <%= form_with model: Book.new do |f| %>
 
-<%= form_with model: Book.new do |f| %>
+  <p class="new-book-title">Title<p>
+   <%= f.text_field :title %>
 
-<p>Title<p>
- <%= f.text_field :title %>
+  <p class="new-book-body">Body</p>
+   <%= f.text_area :body %>
 
-<p>Body</p>
- <%= f.text_area :body %>
+  <p class="new-book-submit"><%= f.submit 'Create Book' %></p>
 
- <%= f.submit 'Create Book' %>
-
- <% end %>
+   <% end %>
+ 
+</div>
