--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,15 @@
-<h1>ようこそBookersへ！</h1>
+<body>
+ <h1 class="title">ようこそ<strong class="bookers">Bookers</strong>へ！</h1>
 
-<h4>Bookersでは、さまざまな書籍に関するあなたの意見や<br>
-印象を共有し交換することができます</h4>
+ <div class="title-text">
+   <p><strong>Bookers</strong>では、さまざまな書籍に関するあなたの意見や<br>
+       印象を共有し交換することができます</p>
 
 
-<%= link_to 'Start' , '/books' %>
+   <span class="start-btn">
+    <%= link_to 'start' , '/books' %>
+   </span>
+
+ </div>
+
+</body>
