--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -6,9 +6,9 @@
        印象を共有し交換することができます</p>
 
 
-   <span class="start-btn">
-    <%= link_to 'start' , '/books' %>
-   </span>
+   <div class="link-btn">
+    <a><%= link_to 'start' , '/books' %></a>
+   </div>
 
  </div>
 
