--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,15 +3,15 @@
 
 <table>
   <tr><th>Title</th><th>Body</th></tr>
-  
+
   <% @books.each do |book| %>
-  
+
   <tr>
   <td class="table-title"><%= book.title %></td>
   <td><%= book.body %></td>
-  <td><a><%= link_to "Show" , book_path(book.id) %></a></td>
-  <td><a><%= link_to "Edit" , edit_book_path(book.id) %></a></td>
-  <td><a><%= link_to "Destroy" , book_path(book.id), method: :delete , "data-confirm" => "Are you sure?" %></a></td>
+  <td><a><%= link_to "Show" , book_path(book) %></a></td>
+  <td><a><%= link_to "Edit" , edit_book_path(book) %></a></td>
+  <td><a><%= link_to "Destroy" , book_path(book), method: :delete , "data-confirm" => "Are you sure?" %></a></td>
   </tr>
 
   <% end %>
@@ -20,7 +20,7 @@
 <div class="new-book">
 
 <h2>New book</h2>
-  
+
   <% if @book.errors.any? %>
    <%= @book.errors.count %>error has occurred
 
@@ -43,6 +43,6 @@
   <p class="new-book-submit"><%= f.submit 'Create Book' %></p>
 
    <% end %>
- 
+
 </div>
 </body>
