--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,9 +9,9 @@
   <tr>
   <td class="table-title"><%= book.title %></td>
   <td><%= book.body %></td>
-  <td><a><%= link_to "Show" , book_path(book) %></a></td>
-  <td><a><%= link_to "Edit" , edit_book_path(book) %></a></td>
-  <td><a><%= link_to "Destroy" , book_path(book), method: :delete , "data-confirm" => "Are you sure?" %></a></td>
+  <td><%= link_to "Show", book_path(book.id) %></td>
+  <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+  <td><%= link_to "Destroy", book_path(book), method: :delete , "data-confirm" => "Are you sure?" %></td>
   </tr>
 
   <% end %>
